@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-09T08:08:16Z",
+  "timestamp" : "2022-06-10T08:07:24Z",
   "count_outdated" : 384,
   "uniques_outdated" : 81,
-  "count" : 392,
-  "uniques" : 86,
+  "count" : 393,
+  "uniques" : 87,
   "views" : [
     {
       "timestamp": "2022-06-06T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-06-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-10T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
