@@ -1,5 +1,5 @@
 {
-  "count": 8,
+  "count": 9,
   "uniques": 4,
   "views": [
     {
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2022-06-09T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-10T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
